# DGDE

./: .gitignore  README.md  dgde.nix  flake.nix  meson.build
.github/workflows/: test.yaml
clients/: .envrc  clients.nix  meson.build
clients/src/: color.c
compositor/: .envrc  compositor.nix  meson.build
compositor/src/: cursor.c  cursor.h  decorations.c  decorations.h  keyboard.c  keyboard.h  main.c  server.c  server.h  view.c  view.h  workspace.c  workspace.h
compositor/src/workspace/: view_tree.c  view_tree.h  workspace.c  workspace.h
src/: main.c
